css/style.css
/* GLOBAL STYLES
-------------------------------------------------- */
/* Padding below the footer and lighter body text */

body {
  padding-bottom: 40px;
  padding-top: 50px;
  color: #5a5a5a;
}

table h1 {
  margin-top:0px;
}

table h3 {
  margin-top: 5px;
}


/* CUSTOMIZE THE NAVBAR
-------------------------------------------------- */

/* Special class on .container surrounding .navbar, used for positioning it into place. */
.navbar-wrapper {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  z-index: 20;
}

/* Flip around the padding for proper display in narrow viewports */
.navbar-wrapper .container {
  padding-right: 0;
  padding-left: 0;
}
.navbar-wrapper .navbar {
  padding-right: 15px;
  padding-left: 15px;
}

/* MOBILE ALERT */
.alert.visible-xs .glyphicon {
  margin-right:10px;
}

/*fix spacing on right-side icons*/
.right {
  margin-right: 15px!important;
}

.right li {
  width: 30px;
}

/* CUSTOMIZE THE CAROUSEL
-------------------------------------------------- */

/* Carousel base class */
.carousel {
  height: 500px;
  background-image: url(../images/sunset.jpg);
  background-size: cover;
  background-position: center bottom;
  margin-bottom: 60px;
  color: #fff;
}
/* Since positioning the image, we need to help out the caption */
.carousel-caption {
  z-index: 10;
}

/* Declare heights because of positioning of img element */
.carousel .item {
  height: 500px;
}
.carousel-inner > .item > img {
  position: absolute;
  top: 0;
  left: 0;
  min-width: 100%;
  height: 500px;
}



/* MARKETING CONTENT
-------------------------------------------------- */

/* Pad the edges of the mobile views a bit */
.marketing {
  padding-right: 15px;
  padding-left: 15px;
}

/* Center align the text within the three columns below the carousel */
.marketing .col-lg-4 {
  margin-bottom: 20px;
  text-align: center;
}
.marketing h2 {
  font-weight: normal;
}
.marketing .col-lg-4 p {
  margin-right: 10px;
  margin-left: 10px;
}

.jumbotron {
  margin-top: 50px;
  background: rgba(0,0,0,0.44)
}


/* Featurettes
------------------------- */

.featurette-divider {
  margin: 80px 0; /* Space out the Bootstrap <hr> more */
}

/* Thin out the marketing headings */
.featurette-heading {
  font-weight: 300;
  line-height: 1;
  letter-spacing: -1px;
}



/* RESPONSIVE CSS
-------------------------------------------------- */
/* carousel item fix for small screens */
@media (max-width: 320px) {
  /* Carousel base class */
  .carousel {
    height: 700px;
  }
  .carousel .item {
    height: 700px;
  }
  .carousel-inner > .item > img {
    height: 700px;
  }
}


@media (min-width: 768px) {

  /* Remove the edge padding needed for mobile */
  .marketing {
    padding-right: 0;
    padding-left: 0;
  }

  /* Navbar positioning foo */
  .navbar-wrapper {
    margin-top: 20px;
  }
  .navbar-wrapper .container {
    padding-right: 15px;
    padding-left:  15px;
  }
  .navbar-wrapper .navbar {
    padding-right: 0;
    padding-left:  0;
  }

  /* The navbar becomes detached from the top, so we round the corners */
  .navbar-wrapper .navbar {
    border-radius: 4px;
  }

  /* Bump up size of carousel content */
  .carousel-caption p {
    margin-bottom: 20px;
    font-size: 21px;
    line-height: 1.4;
  }

  .featurette-heading {
    font-size: 50px;
  }
}

@media (min-width: 992px) {
  .featurette-heading {
    margin-top: 120px;
  }
}

.video-container {
  position: relative;
  padding-bottom: 56.25%;
  padding-top: 30px; height: 0; overflow: hidden;
  margin-bottom: 20px;
}

.video-container iframe,
.video-container object,
.video-container embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.contributors img {
  width: 50px;
}

.contributor-owner img {
  border: 1px solid #428bca;
}

.people td {
  font-size: 20px;
}

.people img {
  width: 50px;
}

.sponsors img {
  padding: 10px 30px 10px 0;
}

.label:hover { text-decoration: none; }

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

/* Custom page header */
.header {
  border-bottom: 1px solid #e5e5e5;
}
/* Make the masthead heading the same height as the navigation */
.header h3 {
  margin-top: 0;
  margin-bottom: 0;
  line-height: 40px;
  padding-bottom: 19px;
}

/* Custom page footer */
.footer {
  padding-top: 19px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

/* Customize container */
.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;
}
.jumbotron .btn {
  font-size: 21px;
  padding: 14px 24px;
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;
}
.marketing p + h4 {
  margin-top: 28px;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-left: 0;
    padding-right: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}

.nowrap { white-space:nowrap; }

#recent-event { margin: 10px 0 0 0; }

.api-title { width: 30%; }

.thumbnail {margin-bottom: 5px;}

/* Bars */
.bar {
  position: relative;
  width: 4px;
  height: 50px;
  margin: 10px 1px 0 1px;
  float: left;
}
.bar span {
    border-style: solid;
    border-width: 0 2px;
    display: block;
    width: 1px;
    margin: 0 1px;
    text-indent: -5000px;
    background: none repeat scroll 0 0 #95A5A6;
    border-color: #95A5A6;
    position: absolute;
    bottom: 0;
}

.project-needs { margin-top: 20px;}

.wide {
  width: 100%;
}

.main-row {
  margin-top: 20px;
}

h2.first {
  margin-top: 0;
}

.blog-text p {
  font-size: 130%;
  line-height: 1.70;
  margin-bottom: 30px;
}

.blog-text img {
  margin: 20px 0;
  text-align: center;
}

/* a11y */
  .skiplink {
	position:absolute;
	left:-10000px;
	top:auto;
	width:1px;
	height:1px;
	overflow:hidden;
}
.skiplink:focus, .skiplink:active {
	left: 0px;
	width: auto;
	height: 2em;
	font-size:1em;
}


/*SPONSORS
------------------------------------------------*/

.sponsors{

    text-align: center;
}

/*---------- use 10px gutter for small phones---------*/
.logos {
    padding-left: 10px;
    padding-right: 10px;
    margin-bottom: 20px;
}
.logos div{
    padding-left: 5px;
    padding-right: 5px;
}
@media (min-width: 480px) {
    .logos {
        padding-left: 0;
        padding-right: 0;
    }
    .logos div {
        padding-left: 15px;
        padding-right: 15px;
    }
}


.logos div{
    display: inline-block;
    vertical-align: middle;
    float: none;
    margin-left: -2px;
    margin-right: -2px;
}

.logos div img{
    padding: 0;
    margin-left: auto;
    margin-right: auto;
}

/*------- 1/5 width columns -----*/

.col-xs-15 {
    width: 20%;
    float: left;
}
@media (min-width: 768px) {
.col-sm-15 {
        width: 20%;
        float: left;
    }
}
@media (min-width: 992px) {
    .col-md-15 {
        width: 20%;
        float: left;
    }
}
@media (min-width: 1200px) {
    .col-lg-15 {
        width: 20%;
        float: left;
    }
}

